[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FEAST_sim"
version = "0.1.7"
description = "Spatial Transcriptomics Simulator"
readme = "README.md"
authors = [
    {name = "Yiru CHEN", email = "yiru.22@intl.zju.edu.cn"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "alphashape>=1.3.1",
    "anndata>=0.9.2",
    "geomloss>=0.2.6",
    "joblib>=1.4.2",
    "matplotlib>=3.7.5",
    "numba>=0.55.2",
    "numpy>=1.22.4",
    "pandas>=2.0.3",
    "paste2>=1.0.1",
    "scanpy>=1.9.8",
    "scikit-learn>=1.2.1",  
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "torch>=1.12.1",
    "tqdm>=4.66.4",
    "spateo-release==1.1.1",
    "pydot>=4.0.1",
    "pyvinecopulib>=0.7.5",
    "thin-plate-spline>=1.2.0",
    
]



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]